# pizza-slicematic

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LOCAL_SETUP.md  README.md  README_ADMIN_SETUP.md  STAGE2_RUN.md  Stage1_PartA_PRD.md  Stage1_PartB_BusinessEconomics.md  app.py  make_calculator.py  make_guide_pdf.py  orders_log.txt  package-lock.json  ppt_text.txt  pyproject.toml  render.yaml  requirements.txt  scratch_dump_schema.py  server.py
.claude/: settings.json
ai/: __init__.py  admin_provider.py  agent.py  config.py  deepgram.py  guardrails.py  language.py  llm.py  main.py  observability.py  profile.py  realtime.py  sarvam.py  sarvam_stream.py  session.py  tools.py  voice_call.py  voice_fillers.py
api/: __init__.py  admin_routes.py  auth.py  cart_helper.py  index.py  menu_helper.py  routes.py  security.py  staff_routes.py
core/: __init__.py  analytics.py  menu.py  models.py  persistence.py  pricing.py  validation.py
dashboard/: __init__.py  langfuse_query.py  routes.py
database/: menu_source.txt  orders_log.txt
db/: __init__.py  admin.py  admin_gateway.py  admin_supabase.py  client.py  escalations.py  messages.py  orders.py  postgres.py  refunds.py  sessions.py  users.py
docs/: API.md  BACKEND_SCHEMA.md  STAGE3_PLAN.md  Stage1_PartA_PRD.md  Stage1_PartB_BusinessEconomics.md  local_setup.md
frontend/: README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json
postman/: SliceMatic.postman_collection.json
ppt/: SliceMatic_PRD.pptx  slicematic.js
reference/: CHAT_ARCHITECTURE.md  VOICE_PIPELINE_ARCHITECTURE.md
scratch/: apply_migration.py  check_orders.py  migrate_menu.py  patch_routes.py  seed_data.py  tables.py  tables_discount.py  test_advance.py  (+3 more)
(+162 files in other folders)
