[project]
name = "pizzaflow"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.1",
    "gradio>=6.19.0",
    "python-dotenv>=1.2.2",
    "supabase>=2.31.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "playwright>=1.60.0",
    "pytest>=9.1.1",
]
